change .env for deployment on railway

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_USER=root
-DB_PASS=randi101024@@
-DB_HOST=db
-DB_NAME=flashbook_db
+DB_PASS=JVrJWQFENgSmhwonyfwEXMyomDGkuQZI
+DB_HOST=dbmysql-k7lj.railway.internal:3306
+DB_NAME=railway
 JWT_SECRET=secret123
