--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_USER=root
-DB_PASS=JVrJWQFENgSmhwonyfwEXMyomDGkuQZI
-DB_HOST=dbmysql-k7lj.railway.internal:3306
-DB_NAME=railway
+DB_PASS=randi101024@@
+DB_HOST=localhost:3306
+DB_NAME=flashbook_db
 JWT_SECRET=secret123
